# epaperify

./: .gitignore  .prettierignore  Cargo.toml  README.md  browser.js  epaperify.wasi-browser.js  epaperify.wasi.cjs  index.d.ts  index.js  package-lock.json  package.json
.github/actions/setup-rust/: action.yaml
.github/workflows/: CI.yml  lint.yml
.husky/: pre-commit
__test__/: index.spec.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/wasm32-wasi/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: diff.rs  gray_4bpp.rs  gray_4bpp_with_text.rs  grey_4bpp.rs  grey_4bpp_with_text.rs  image_to_qoi.rs  lib.rs  monochrome.rs  png_convert.rs  qoi_convert.rs  rgb_4bpp.rs  rgb_4bpp_with_text.rs  rgb_convert.rs
