[package]
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
edition = "2021"
name = "epaperify"
version = "1.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = [ 
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date"
]}
napi-derive = { version = "2", features = ["type-def"] }
image = "0.23.14"
serde = "1"
serde_derive = "1"
serde_json = "1"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
