[package]
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
edition = "2021"
name    = "epaperify"
version = "2.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image        = "0.25.9"
lzzzz        = "2.0.0"
napi         = { version = "3" }
napi-derive  = { version = "3" }
png          = "0.18.0"
qoi          = "0.4.1"
serde        = "1"
serde_derive = "1"
serde_json   = "1"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = { version = "0.1" }


[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
